Closed Bug 845350 Opened 13 years ago Closed 13 years ago

QtGeolocation provider does not work due "using namespace QtMobility;" in cpp, not header

Categories

(Core :: DOM: Geolocation, defect)

ARM
MeeGo
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: coderusinbox, Assigned: coderusinbox)

References

Details

Attachments

(1 file, 3 obsolete files)

Just compiled and tested embedlite branch on Nokia N9, got an error while using HTML5 location tests: Object::connect: No such slot QTMLocationProvider::positionUpdated(QGeoPositionInfo) in /home/coderus/mozilla-central/dom/system/unix/QTMLocationProvider.cpp:19 Checked sources and found bug in using namespace QtMobility file: /dom/system/unix/QTMLocationProvider.h need to move from cpp file using namespace QtMobility;
Depends on: 847382
Blocks: 815047
Status: UNCONFIRMED → NEW
No longer depends on: 847382
Ever confirmed: true
Attached patch patch (obsolete) — Splinter Review
Attachment #721590 - Flags: review?(romaxa)
Comment on attachment 721590 [details] [diff] [review] patch Please use hg/git diff -U8 Also add some header to patch, see example in https://bug815047.bugzilla.mozilla.org/attachment.cgi?id=685045
Attached patch patch (obsolete) — Splinter Review
Attachment #721590 - Attachment is obsolete: true
Attachment #721590 - Flags: review?(romaxa)
Attachment #721599 - Flags: review+
Attachment #721599 - Flags: review+ → review?(romaxa)
Attached patch patch (obsolete) — Splinter Review
Attachment #721599 - Attachment is obsolete: true
Attachment #721599 - Flags: review?(romaxa)
Attachment #721603 - Flags: review?(romaxa)
Attached patch patchSplinter Review
Attachment #721603 - Attachment is obsolete: true
Attachment #721603 - Flags: review?(romaxa)
Attachment #721766 - Flags: review?(romaxa)
Comment on attachment 721766 [details] [diff] [review] patch Looks good now.
Attachment #721766 - Flags: review?(romaxa) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: