Bug 845350 - QtGeolocation provider does not work due "using namespace QtMobility;" in cpp, not header. r=romaxa