dom/system/unix/QTMLocationProvider.h
@@ -11,6 +11,8 @@
 #include "nsCOMPtr.h"
 
 
+using namespace QtMobility;
+
 class QTMLocationProvider : public QObject,
                             public nsIGeolocationProvider
 {
@@ -24,12 +26,12 @@ public:
 
 public Q_SLOTS:
     // QGeoPositionInfoSource
-    void positionUpdated(const QtMobility::QGeoPositionInfo&);
+    void positionUpdated(const QGeoPositionInfo&);
 
 private:
     ~QTMLocationProvider();
 
-    QtMobility::QGeoPositionInfoSource* mLocation;
+    QGeoPositionInfoSource* mLocation;
     nsCOMPtr<nsIGeolocationUpdate> mCallback;
 };
 
